Change Value For Music Disclaimer, Fix Background QD
Change the value that music disclaimer use from showed to true and Fix Problem With QD Background Not Showing UP

--- a/QD.css
+++ b/QD.css
@@ -1,7 +1,7 @@
 
 
 body {
-    background-image: url(https://hqkvmvdjpvtintgocork.supabase.co/storage/v1/object/sign/cache_img/qd_background.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJjYWNoZV9pbWcvcWRfYmFja2dyb3VuZC5wbmciLCJpYXQiOjE3MjA1NDU3OTUsImV4cCI6MTg3ODIyNTc5NX0.4CRSO138yumFwcWqnz_EiiVU4Lr3vDckkZeJ4OJgWoo&t=2024-07-09T17%3A23%3A11.314Z)  
+    background-image: url(https://dl.imgdrop.io/file/aed8b140-8472-4813-922b-7ce35ef93c9e/2024/07/25/qd_background-1ba449882aed2141f.png)  
 }
 
 
